@@ -221,7 +221,8 @@ production.
 * (bug 30497) Add client-nojs and client-js classes on document element
   to let styles easily hide or show things based on general JS availability
 * (bug 31293) If Special:Userlogin is loaded over HTTPS, display
-  MediaWiki:loginend-https instead of MediaWiki:loginend, if it's not empty
+  MediaWiki:loginend-https instead of MediaWiki:loginend, if it's not empty.
+  Same for signupend on the account creation page.
 
 === Bug fixes in 1.18 ===
 * mw.util.getScript has been implemented (like wfScript in GlobalFunctions.php)
